# smart-babylon-library

./: .gitignore  LICENSE  README.md  babylon_library.py  babylon_library_example.py  example.py  library_structure_example.py  main.py  project.toml  pyproject.toml  setup.py  smart_babylon_library_example.py  text_encoder_example.py
core/: tools.py
data/: dev_requirements.txt
smart_babylon_library/: __init__.py  babylon_image_fractal_library.py  babylon_image_library.py  babylon_lib_with_books.py  babylon_library.py  config.py  library_structure.py  new_babylon_lib_with_books.py  new_babylon_library.py  smart_babylon_library.py  text_encoder.py  tools.py
smart_babylon_library/character_sets/: __init__.py  alphabets.py  constants.py  core.py  digits.py  punctuation.py
tests/: test_babylon_lib_with_books.py  test_babylon_library.py  test_library_structure.py  test_smart_babylon_library.py  test_text_encoder.py  test_tools.py
