[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-babylon-library"
version = "0.6.5"
description = "A Python library for creating and manipulating text libraries, inspired by the Library of Babel concept and my own concept of Smart Passwords."
authors = [
    { name = "A.A. Suvorov", email = "smartlegiondev@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smartlegionlab/smart-babylon-library"

[tool.setuptools.dynamic]
version = { attr = "smart_babylon_library.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_babylon_library*"]