[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-babylon-library"
version = "1.0.0"
description = "Smart Babylon Library."
authors = [
    { name = "Alexander Suvorov", email = "smartlegionlab@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smartlegionlab/smart-babylon-library"

[tool.setuptools.dynamic]
version = { attr = "smart_babylon_library.__version__" }

[tool.setuptools.packages.find]
where = ["."]